# nlp-cluster-extract

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py  ui_helpers.py
scripts/: generate_sample_data.py
src/nlp_cluster_extract/: __init__.py  cli.py  clustering.py  extraction.py  io_utils.py  preprocess.py
src/nlp_cluster_extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
