[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-cluster-extract"
version = "0.1.0"
description = "Portfolio-grade NLP clustering and extraction toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer",
    "rich",
    "pandas",
    "scikit-learn",
    "numpy",
    "nltk",
    "yake",
]

[project.scripts]
nlpce = "nlp_cluster_extract.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
